@startuml
'https://plantuml.com/class-diagram
skinparam classAttributeIconSize 0
hide circle
hide methods

class "DGS Administrator" {
}

class Employee {
    - name
    - postal_address
    - phone_number
    - email
    - citizen_card_number
}

class Nurse {
}

class Receptionist {
}

"DGS Administrator" "1" -right-- "0..*" Employee:  manages >

Nurse --|> Employee
Receptionist --|> Employee

@enduml